--- a/TV Shows/TV Shows/Login/Login.storyboard
+++ b/TV Shows/TV Shows/Login/Login.storyboard
@@ -85,6 +85,17 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KQC-Pr-Bl9" userLabel="passwordContainer">
                                 <rect key="frame" x="20" y="385" width="335" height="50"/>
                                 <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TAu-JY-MXj" userLabel="seePasswordButton">
+                                        <rect key="frame" x="299" y="16" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="5oe-1L-FCR"/>
+                                            <constraint firstAttribute="width" constant="24" id="Den-hE-Arf"/>
+                                        </constraints>
+                                        <state key="normal" image="ic-visible"/>
+                                        <connections>
+                                            <action selector="seePasswordButtonActionHandler" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Y4T-8x-urL"/>
+                                        </connections>
+                                    </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOe-Rc-uNw" userLabel="simpleLineView">
                                         <rect key="frame" x="0.0" y="49" width="335" height="1"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -93,11 +104,11 @@
                                         </constraints>
                                     </view>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0H1-4P-1VG" userLabel="passwordTextfield">
-                                        <rect key="frame" x="8.6666666666666572" y="8" width="318" height="34"/>
+                                        <rect key="frame" x="10" y="8" width="280" height="34"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="318" id="0qA-wZ-Wfb"/>
+                                            <constraint firstAttribute="width" constant="280" id="0qA-wZ-Wfb"/>
                                         </constraints>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -106,11 +117,13 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="TAu-JY-MXj" firstAttribute="top" secondItem="KQC-Pr-Bl9" secondAttribute="top" constant="16" id="6wy-Ao-yol"/>
                                     <constraint firstItem="AOe-Rc-uNw" firstAttribute="leading" secondItem="KQC-Pr-Bl9" secondAttribute="leading" id="GhS-gW-SRD"/>
+                                    <constraint firstAttribute="bottom" secondItem="TAu-JY-MXj" secondAttribute="bottom" constant="10" id="HyI-Ct-4L2"/>
                                     <constraint firstItem="0H1-4P-1VG" firstAttribute="centerY" secondItem="KQC-Pr-Bl9" secondAttribute="centerY" id="IYA-jn-A3g"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="Tl7-J4-AsZ"/>
-                                    <constraint firstItem="0H1-4P-1VG" firstAttribute="centerX" secondItem="KQC-Pr-Bl9" secondAttribute="centerX" id="VEC-0D-FKM"/>
                                     <constraint firstAttribute="bottom" secondItem="AOe-Rc-uNw" secondAttribute="bottom" id="Yan-pj-mwb"/>
+                                    <constraint firstAttribute="trailing" secondItem="TAu-JY-MXj" secondAttribute="trailing" constant="12" id="ZRO-9c-Ag1"/>
+                                    <constraint firstItem="0H1-4P-1VG" firstAttribute="leading" secondItem="KQC-Pr-Bl9" secondAttribute="leading" constant="10" id="dXK-94-qed"/>
                                     <constraint firstAttribute="height" constant="50" id="kdV-Lz-GPr"/>
                                     <constraint firstAttribute="trailing" secondItem="AOe-Rc-uNw" secondAttribute="trailing" id="qdW-vp-zUZ"/>
                                 </constraints>
@@ -124,6 +137,9 @@
                                             <constraint firstAttribute="width" constant="24" id="CcY-9d-rnU"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="ic-checkbox-unselected"/>
+                                        <connections>
+                                            <action selector="rememberCheckButtonActionHandler" destination="Y6W-OH-hqX" eventType="touchUpInside" id="IUk-Kq-AcB"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember Me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uG3-Bk-tex">
                                         <rect key="frame" x="30.333333333333343" y="4.3333333333333144" width="112" height="21"/>
@@ -142,13 +158,15 @@
                                     <constraint firstAttribute="bottom" secondItem="XB9-jh-37r" secondAttribute="bottom" constant="3" id="u1u-R2-7SR"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qff-7m-EWk" userLabel="loginButton">
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qff-7m-EWk" userLabel="loginButton">
                                 <rect key="frame" x="20" y="510.66666666666674" width="335" height="45"/>
                                 <color key="backgroundColor" white="1" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="qu9-3a-yRV"/>
                                 </constraints>
-                                <state key="normal" title="Login"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rNK-QV-aFX" userLabel="registerButton">
                                 <rect key="frame" x="133" y="577.66666666666663" width="109" height="20"/>
@@ -157,7 +175,9 @@
                                     <constraint firstAttribute="width" constant="109" id="wux-20-AEb"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Register"/>
+                                <state key="normal" title="Register">
+                                    <color key="titleColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -189,6 +209,13 @@
                             <constraint firstItem="aCS-az-flc" firstAttribute="top" secondItem="7qS-3u-tPa" secondAttribute="bottom" constant="20" id="x7B-3S-47V"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailTextfield" destination="C5W-Uh-IDU" id="jxx-Ki-KpY"/>
+                        <outlet property="loginButton" destination="qff-7m-EWk" id="D6n-Ja-BYF"/>
+                        <outlet property="passwordTextfield" destination="0H1-4P-1VG" id="3e9-qC-cew"/>
+                        <outlet property="rememberCheckButton" destination="XB9-jh-37r" id="wNh-tY-PrF"/>
+                        <outlet property="seePasswordButton" destination="TAu-JY-MXj" id="vUq-t8-cUW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -197,6 +224,7 @@
     </scenes>
     <resources>
         <image name="ic-checkbox-unselected" width="24" height="24"/>
+        <image name="ic-visible" width="24" height="24"/>
         <image name="logo-white" width="162" height="38"/>
         <image name="splash-top-left" width="140" height="100"/>
         <image name="splash-top-right" width="202" height="266"/>
