--- a/TV Shows/TV Shows/Home/Home.storyboard
+++ b/TV Shows/TV Shows/Home/Home.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,32 +16,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cA8-DC-BDC">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="120" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cA8-DC-BDC">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TVShowTableViewCell" id="Gy7-op-ghz" customClass="TVShowTableViewCell" customModule="TV_Shows" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="53.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TVShowTableViewCell" rowHeight="120" id="Gy7-op-ghz" customClass="TVShowTableViewCell" customModule="TV_Shows" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Gy7-op-ghz" id="hUY-Wo-dep">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="53.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENh-pL-Ifd">
-                                                    <rect key="frame" x="16" y="16" width="382" height="21.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENh-pL-Ifd">
+                                                    <rect key="frame" x="132" y="50" width="41.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P99-on-0Vq">
+                                                    <rect key="frame" x="20" y="12" width="90" height="96"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="90" id="5N9-1d-ScC"/>
+                                                        <constraint firstAttribute="height" constant="96" id="8Fx-qh-Yf6"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="ENh-pL-Ifd" firstAttribute="leading" secondItem="hUY-Wo-dep" secondAttribute="leading" constant="16" id="GUg-f5-0Sc"/>
-                                                <constraint firstAttribute="trailing" secondItem="ENh-pL-Ifd" secondAttribute="trailing" constant="16" id="ono-eo-1MW"/>
-                                                <constraint firstItem="ENh-pL-Ifd" firstAttribute="top" secondItem="hUY-Wo-dep" secondAttribute="top" constant="16" id="rg9-Jy-v5p"/>
-                                                <constraint firstAttribute="bottom" secondItem="ENh-pL-Ifd" secondAttribute="bottom" constant="16" id="xbw-f2-fpK"/>
+                                                <constraint firstAttribute="bottom" secondItem="P99-on-0Vq" secondAttribute="bottom" constant="12" id="07n-zf-xrf"/>
+                                                <constraint firstAttribute="bottom" secondItem="P99-on-0Vq" secondAttribute="bottom" constant="12" id="HvW-ek-ITN"/>
+                                                <constraint firstAttribute="bottom" secondItem="P99-on-0Vq" secondAttribute="bottom" constant="12" id="MVb-jr-dKb"/>
+                                                <constraint firstItem="ENh-pL-Ifd" firstAttribute="leading" secondItem="P99-on-0Vq" secondAttribute="trailing" constant="22" id="bhK-Q5-fS4"/>
+                                                <constraint firstItem="P99-on-0Vq" firstAttribute="top" secondItem="hUY-Wo-dep" secondAttribute="top" constant="12" id="hX3-9C-rSS"/>
+                                                <constraint firstItem="ENh-pL-Ifd" firstAttribute="centerY" secondItem="hUY-Wo-dep" secondAttribute="centerY" id="lwk-29-ceG"/>
+                                                <constraint firstItem="P99-on-0Vq" firstAttribute="leading" secondItem="hUY-Wo-dep" secondAttribute="leading" constant="20" id="p5U-y8-fuM"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
+                                            <outlet property="showImageView" destination="P99-on-0Vq" id="NQa-ck-h3x"/>
                                             <outlet property="showNameLabel" destination="ENh-pL-Ifd" id="cOc-0j-P0i"/>
                                         </connections>
                                     </tableViewCell>
@@ -70,9 +81,4 @@
             <point key="canvasLocation" x="-23" y="36"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
