--- a/TV Shows/TV Shows/ShowDetails/ShowDetails.storyboard
+++ b/TV Shows/TV Shows/ShowDetails/ShowDetails.storyboard
@@ -66,7 +66,7 @@
                                             <outlet property="showImageView" destination="hkz-CY-ppy" id="RMI-73-L9U"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShowDetailOthersTableViewCell" id="Q6c-p5-YIS">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShowDetailOthersTableViewCell" id="Q6c-p5-YIS" customClass="ShowDetailOthersTableViewCell" customModule="TV_Shows" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="624.5" width="414" height="600"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Q6c-p5-YIS" id="fyB-Cr-iwr">
